# YJson

./: .gitignore  .vimspector.json  CMakeLists.txt  README.md  build.bat  build.sh  workspace.code-workspace  xmake.lua  yencode.h  yjson.cpp  yjson.h  ystring.h
.cache/clangd/index/: main.cpp.30337951278DB143.idx  yencode.h.27CC42FB207E2E3D.idx  yjson.cpp.12417EC643F7FABF.idx  yjson.h.756E91204ED6FBBE.idx  ystring.h.002337243C57AC73.idx
include/: yencode.h  yjson.h
include/yjson/: yjson.h
install/include/: yjson.h
src/: yjson.cpp
test/: jslib.cpp  main.cpp  temp.json  test.cpp  test.json  text.json  usage.cpp  yencode.h
